--- a/index.html
+++ b/index.html
@@ -1,25 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">       
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">   
-        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
-  
-    </head>
-    <body>
-    	
-       
-     <!-- ======= JavaScript ====== --> 
-     <script type="text/javascript" src="js/script.js"></script>
 
-     <!-- Angular-->
-     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Katarzyna Trzesniewska</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- jQuery -->    
+</head>
+
+<body>
+    <header>
+        <!-- Bootstrap menu - fixed to top -->
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                        aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Katarzyna Trześniewska</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse navbar-right">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">O mnie</a>
+                        </li>
+                        <li>
+                            <a href="#about">Technologie</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Projekty</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Kontakt</a>
+                        </li>                        
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <main class="container">
+            <h1>Hi!<br>Nazywam się Katarzyna Trześniewska.</h1>
+        </main>
+    </header>
+
+
+
+    <!-- ======= JavaScript ====== -->
+    <script type="text/javascript" src="js/script.js"></script>
+
+    <!-- Angular-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
+
+    <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 
-     <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-    </body>
+</body>
+
 </html>
