--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div id="navbar" class="navbar-collapse collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#">O mnie</a>
+                            <a href="#about">O mnie</a>
                         </li>
                         <li>
-                            <a href="#about">Technologie</a>
+                            <a href="#technology">Technologie</a>
                         </li>
                         <li>
-                            <a href="#contact">Projekty</a>
+                            <a href="#projects">Projekty</a>
                         </li>
                         <li>
                             <a href="#contact">Kontakt</a>
@@ -44,7 +44,9 @@
             </div>
         </nav>
         <main class="container">
-            <h1>Hi!<br>Nazywam się Katarzyna Trześniewska.</h1>
+            <div class="slogan">
+            <h1>Nazywam się<br><span>Katarzyna&nbsp;Trześniewska</span><br>i jestem Frond-end developerem.</h1>
+            </div>
         </main>
     </header>
 
