--- a/index.html
+++ b/index.html
@@ -43,12 +43,24 @@
                 </div>
             </div>
         </nav>
-        <main class="container">
+        <main>
             <div class="slogan">
-            <h1>Nazywam się<br><span>Katarzyna&nbsp;Trześniewska</span><br>i jestem Frond-end developerem.</h1>
-            </div>
+            <h1>Katarzyna Trześniewska</h1>
+            <h2>Front-End Developer</h2>
+            </div>            
         </main>
+        <div class="scroll-down"><span class="glyphicon glyphicon-chevron-down"></span></div>
     </header>
+
+    <section id="about" class="about">
+        <div class="container row">
+<div class="col-md-8">
+    <h2>O mnie</h2>
+    <p>Nazywam się Katarzyna Trześniewska. Z wykształcenia jestem ekonosmiską o specjalności zarządzenie jakością i środowiskiem. Studia ukończyłam na Uniwersytecie Ekonomicznym we Wrocławiu.   </p>
+</div>
+<div class="col-md-4"></div>
+        </div>
+    </section>
 
 
 
