Add about section

--- a/index.html
+++ b/index.html
@@ -38,28 +38,41 @@
                         </li>
                         <li>
                             <a href="#contact">Kontakt</a>
-                        </li>                        
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <main>
             <div class="slogan">
-            <h1>Katarzyna Trześniewska</h1>
-            <h2>Front-End Developer</h2>
-            </div>            
+                <h1>Katarzyna Trześniewska</h1>
+                <h2>Front-End Developer</h2>
+            </div>
         </main>
-        <div class="scroll-down"><span class="glyphicon glyphicon-chevron-down"></span></div>
+        <div class="scroll-down">
+            <span class="glyphicon glyphicon-chevron-down"></span>
+        </div>
     </header>
 
-    <section id="about" class="about">
-        <div class="container row">
-<div class="col-md-8">
-    <h2>O mnie</h2>
-    <p>Nazywam się Katarzyna Trześniewska. Z wykształcenia jestem ekonosmiską o specjalności zarządzenie jakością i środowiskiem. Studia ukończyłam na Uniwersytecie Ekonomicznym we Wrocławiu.   </p>
-</div>
-<div class="col-md-4"></div>
+    <section id="about" class=" about">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h2>O mnie</h2>
+                <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                    możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
+                    gier planszowych.</p>
+                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
+                    że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
+                    <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
+                    przeze mnie.</p>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <img class="img-thumbnail img-responsive center-block" src="../Katarzyna_Trzesniewska/images/about_me/mojePhoto.JPG">
+            </div>
         </div>
+    </div>
     </section>
 
 
