Add technology section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
     </div>
     </section>
 
+    <section id="technology" class="technology">
+        <div class="container">
+            <h2>Stosowane technologie</h2>
+            <div class="box-logo">
+                <div class="box1"><img src="images/technology/HTML_large.png"></div>
+                <div class="box2"><img src="images/technology/CSS_large.png"></div>
+                <div class="box3"><img src="images/technology/js_large.png"></div>              
+                <div class="box4"><img src="images/technology/jquery_large.png"></div>
+                <div class="box5"><img src="images/technology/bootstrap_large.png"></div>
+                <div class="box6"><img src="images/technology/sass_large.png"></div>
+                <div class="box7"><img src="images/technology/git-logo.png"></div>
+            </div> 
+               
+        </div>
+
+    </section>
+
 
 
     <!-- ======= JavaScript ====== -->
