Edit technology section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                 <div class="box6"><img src="images/technology/sass_large.png"></div>
                 <div class="box7"><img src="images/technology/git-logo.png"></div>
             </div> 
+            <h3>Uczę się i wprowadzam do projektów:</h3>
+            <div class="box-logo">
+                <div class="box8"><img src="images/technology/AngularJS_logo.svg.png"></div>
+                <div class="box9"><img src="images/technology/590px-Node.js_logo.svg.png"></div>                            
+            </div>
                
         </div>
 
