--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Katarzyna Trzesniewska</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -56,45 +56,93 @@
 
     <section id="about" class=" about">
         <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h2>O mnie</h2>
-                <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
-                    możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
-                    gier planszowych.</p>
-                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
-                    że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
+            <div class="row">
+                <div class="col-md-8">
+                    <h2>O mnie</h2>
+                    <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                        możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
+                        gier planszowych.</p>
+                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
+                        przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
                     <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
-                    przeze mnie.</p>
-                </p>
-            </div>
-            <div class="col-md-4">
-                <img class="img-thumbnail img-responsive center-block" src="../Katarzyna_Trzesniewska/images/about_me/mojePhoto.JPG">
+                        przeze mnie.</p>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-thumbnail img-responsive center-block" src="../Katarzyna_Trzesniewska/images/about_me/mojePhoto.JPG">
+                </div>
             </div>
         </div>
-    </div>
     </section>
 
     <section id="technology" class="technology">
         <div class="container">
             <h2>Stosowane technologie</h2>
             <div class="box-logo">
-                <div class="box1"><img src="images/technology/HTML_large.png"></div>
-                <div class="box2"><img src="images/technology/CSS_large.png"></div>
-                <div class="box3"><img src="images/technology/js_large.png"></div>              
-                <div class="box4"><img src="images/technology/jquery_large.png"></div>
-                <div class="box5"><img src="images/technology/bootstrap_large.png"></div>
-                <div class="box6"><img src="images/technology/sass_large.png"></div>
-                <div class="box7"><img src="images/technology/git-logo.png"></div>
-            </div> 
+                <div class="box1">
+                    <img src="images/technology/HTML_large.png">
+                </div>
+                <div class="box2">
+                    <img src="images/technology/CSS_large.png">
+                </div>
+                <div class="box3">
+                    <img src="images/technology/js_large.png">
+                </div>
+                <div class="box4">
+                    <img src="images/technology/jquery_large.png">
+                </div>
+                <div class="box5">
+                    <img src="images/technology/bootstrap_large.png">
+                </div>
+                <div class="box6">
+                    <img src="images/technology/sass_large.png">
+                </div>
+                <div class="box7">
+                    <img src="images/technology/git-logo.png">
+                </div>
+            </div>
             <h3>Uczę się i wprowadzam do projektów:</h3>
             <div class="box-logo">
-                <div class="box8"><img src="images/technology/AngularJS_logo.svg.png"></div>
-                <div class="box9"><img src="images/technology/590px-Node.js_logo.svg.png"></div>                            
+                <div class="box8">
+                    <img src="images/technology/AngularJS_logo.svg.png">
+                </div>
+                <div class="box9">
+                    <img src="images/technology/590px-Node.js_logo.svg.png">
+                </div>
             </div>
-               
         </div>
+    </section>
 
+    <section id="projects" class="projects">        
+            <h2>Projekty</h2>
+            <div class="box-project">
+                <div class="project-1">
+                    <img src="images/projects/FlexboxRWD.png">
+                    <div class="details">
+                    <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank"><button >
+                        <i class="fa fa-desktop"></i>
+                    </button></a>
+                    <a href="https://github.com/katarzynka1234/Project_Flexbox_RWD" target="_blank"><button>
+                        <i class="fa fa-code"></i>
+                    </button></a>  
+                </div>                 
+                    <div class="description">
+                        <h4>Cięcie szablonu z JPG do HTML</h4>
+
+
+                    </div>
+                </div>
+                <div class="project-2">
+                    <img src="images/projects/PSDtoHTML.png">
+                </div>
+                <div class="project-3"></div>
+                <div class="project-4"></div>
+            </div>
+        
+    </section>
+
+    <section>
+        <div class="temoprary"></div>
     </section>
 
 
