Edit about section

--- a/index.html
+++ b/index.html
@@ -56,21 +56,18 @@
 
     <section id="about" class=" about">
         <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <h2>O mnie</h2>
-                    <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
-                        możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
-                        gier planszowych.</p>
-                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
-                        przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
-                    <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
-                        przeze mnie.</p>
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-thumbnail img-responsive center-block" src="../Katarzyna_Trzesniewska/images/about_me/mojePhoto.JPG">
-                </div>
+            <div class="about-box">
+                <h2>O mnie</h2>
+                <div class="picture">
+                       <img src="images/about_me/mojePhoto.JPG">
+                    </div>
+                <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                    możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
+                    gier planszowych.</p>
+                <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że przede
+                    mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
+                <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę przeze
+                    mnie.</p>
             </div>
         </div>
     </section>
@@ -113,32 +110,36 @@
         </div>
     </section>
 
-    <section id="projects" class="projects">        
-            <h2>Projekty</h2>
-            <div class="box-project">
-                <div class="project-1">
-                    <img src="images/projects/FlexboxRWD.png">
-                    <div class="details">
-                    <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank"><button >
-                        <i class="fa fa-desktop"></i>
-                    </button></a>
-                    <a href="https://github.com/katarzynka1234/Project_Flexbox_RWD" target="_blank"><button>
-                        <i class="fa fa-code"></i>
-                    </button></a>  
-                </div>                 
-                    <div class="description">
-                        <h4>Cięcie szablonu z JPG do HTML</h4>
+    <section id="projects" class="projects">
+        <h2>Projekty</h2>
+        <div class="box-project">
+            <div class="project-1">
+                <img src="images/projects/FlexboxRWD.png">
+                <div class="details">
+                    <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank">
+                        <button>
+                            <i class="fa fa-desktop"></i>
+                        </button>
+                    </a>
+                    <a href="https://github.com/katarzynka1234/Project_Flexbox_RWD" target="_blank">
+                        <button>
+                            <i class="fa fa-code"></i>
+                        </button>
+                    </a>
+                </div>
+                <div class="description">
+                    <h4>Cięcie szablonu z JPG do HTML</h4>
 
 
-                    </div>
                 </div>
-                <div class="project-2">
-                    <img src="images/projects/PSDtoHTML.png">
-                </div>
-                <div class="project-3"></div>
-                <div class="project-4"></div>
             </div>
-        
+            <div class="project-2">
+                <img src="images/projects/PSDtoHTML.png">
+            </div>
+            <div class="project-3"></div>
+            <div class="project-4"></div>
+        </div>
+
     </section>
 
     <section>
