--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Katarzyna Trzesniewska</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -59,20 +60,60 @@
             <div class="about-box">
                 <h2>O mnie</h2>
                 <div class="picture">
-                       <img src="images/about_me/mojePhoto.JPG">
-                    </div>
+                    <img src="images/about_me/mojePhoto.JPG">
+                </div>
                 <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
                     możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
                     gier planszowych.</p>
                 <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że przede
                     mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
                 <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę przeze
-                    mnie.</p>
+                    mnie.
+                </p>
             </div>
         </div>
     </section>
 
     <section id="technology" class="technology">
+        <h2>Stosowane technologie</h2>
+        <div class="box-logo-1">
+            <div class="box1">
+                <i class="devicon-html5-plain-wordmark"></i>
+            </div>
+            <div class="box2">
+                <i class="devicon-css3-plain-wordmark"></i>
+            </div>
+            <div class="box3">
+                <i class="devicon-javascript-plain"></i>
+            </div>
+            <div class="box4">
+                <i class="devicon-jquery-plain-wordmark"></i>
+            </div>
+            <div class="box5">
+                <i class="devicon-bootstrap-plain"></i>
+            </div>
+            <div class="box6">
+                <i class="devicon-sass-original"></i>
+            </div>
+            <div class="box7">
+                <i class="devicon-git-plain-wordmark"></i>
+            </div>
+        </div>
+        <h3>Aktualnie uczę się i wprowadzam do projektów:</h3>
+        <div class="box-logo-2">
+            <div class="box8">
+                <i class="devicon-angularjs-plain"></i>
+            </div>
+            <div class="box9">
+                <i class="devicon-nodejs-plain"></i>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <!-- <section id="technology" class="technology">
         <div class="container">
             <h2>Stosowane technologie</h2>
             <div class="box-logo">
@@ -108,7 +149,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="projects" class="projects">
         <h2>Projekty</h2>
