--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="picture">
                     <img src="images/about_me/mojePhoto.JPG">
                 </div>
+                <div class="about-text">
                 <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
                     możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
                     gier planszowych.</p>
@@ -70,6 +71,8 @@
                 <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę przeze
                     mnie.
                 </p>
+            </div>
+            <button>Czytaj więcej</button>
             </div>
         </div>
     </section>
