--- a/index.html
+++ b/index.html
@@ -63,16 +63,26 @@
                     <img src="images/about_me/mojePhoto.JPG">
                 </div>
                 <div class="about-text">
-                <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
-                    możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
-                    gier planszowych.</p>
-                <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że przede
-                    mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
-                <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę przeze
-                    mnie.
-                </p>
-            </div>
-            <button>Czytaj więcej</button>
+                    <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                        możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
+                        gier planszowych.</p>
+                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
+                        przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną motywację w działaniu.</p>
+                    <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
+                        przeze mnie.
+                    </p>
+                </div>
+                <div class="about-text not-visible">
+                    <p>Nazywam się Katarzyna Trześniewska. Z wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                        możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
+                        gier planszowych.</p>
+                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
+                        przede mną jeszcze wiele nauki, ale właśnie to daje mi ogromną motywację w działaniu.</p>
+                    <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
+                        przeze mnie.
+                    </p>
+                </div>
+                <button>Czytaj więcej</button>
             </div>
         </div>
     </section>
@@ -114,76 +124,61 @@
 
     </section>
 
-
-
-    <!-- <section id="technology" class="technology">
-        <div class="container">
-            <h2>Stosowane technologie</h2>
-            <div class="box-logo">
-                <div class="box1">
-                    <img src="images/technology/HTML_large.png">
-                </div>
-                <div class="box2">
-                    <img src="images/technology/CSS_large.png">
-                </div>
-                <div class="box3">
-                    <img src="images/technology/js_large.png">
-                </div>
-                <div class="box4">
-                    <img src="images/technology/jquery_large.png">
-                </div>
-                <div class="box5">
-                    <img src="images/technology/bootstrap_large.png">
-                </div>
-                <div class="box6">
-                    <img src="images/technology/sass_large.png">
-                </div>
-                <div class="box7">
-                    <img src="images/technology/git-logo.png">
-                </div>
-            </div>
-            <h3>Uczę się i wprowadzam do projektów:</h3>
-            <div class="box-logo">
-                <div class="box8">
-                    <img src="images/technology/AngularJS_logo.svg.png">
-                </div>
-                <div class="box9">
-                    <img src="images/technology/590px-Node.js_logo.svg.png">
-                </div>
-            </div>
-        </div>
-    </section> -->
-
     <section id="projects" class="projects">
-        <h2>Projekty</h2>
+        <div class="container">
+        <h2>Wykonane projekty</h2>
         <div class="box-project">
             <div class="project-1">
                 <img src="images/projects/FlexboxRWD.png">
+                <button>Szczegóły</button>
                 <div class="details">
+                    <div class="description">
+                        <h4>Cięcie szablonu JPG do HTML</h4>
+                        <i class="devicon-html5-plain-wordmark"></i>
+                        <i class="devicon-css3-plain-wordmark"></i>
+                        <i class="devicon-git-plain"></i>
+                    </div>
                     <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank">
-                        <button>
+                        <button class="icon-link">
                             <i class="fa fa-desktop"></i>
                         </button>
                     </a>
                     <a href="https://github.com/katarzynka1234/Project_Flexbox_RWD" target="_blank">
-                        <button>
+                        <button class="icon-link">
                             <i class="fa fa-code"></i>
                         </button>
                     </a>
                 </div>
-                <div class="description">
-                    <h4>Cięcie szablonu z JPG do HTML</h4>
-
-
-                </div>
             </div>
             <div class="project-2">
                 <img src="images/projects/PSDtoHTML.png">
+                <button>Szczegóły</button>
+                <div class="details">
+                    <div class="description">
+                        <h4>Cięcie szablonu PSD do HTML</h4>
+                        <i class="devicon-html5-plain-wordmark"></i>
+                        <i class="devicon-css3-plain-wordmark"></i>
+                        <i class="devicon-bootstrap-plain"></i>
+                        <i class="devicon-jquery-plain-wordmark"></i>
+                        <i class="devicon-sass-original"></i>
+                        <i class="devicon-git-plain"></i>
+                    </div>
+                    <a href="https://katarzynka1234.github.io/Template_PSDtoHTML_1/" target="_blank">
+                        <button class="icon-link">
+                            <i class="fa fa-desktop"></i>
+                        </button>
+                    </a>
+                    <a href="https://github.com/katarzynka1234/Template_PSDtoHTML_1" target="_blank">
+                        <button class="icon-link">
+                            <i class="fa fa-code"></i>
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="project-3"></div>
             <div class="project-4"></div>
         </div>
-
+    </div>
     </section>
 
     <section>
