Add js code - doesn't work properly!

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="box-project">
             <div class="project-1">
                 <img src="images/projects/FlexboxRWD.png">
-                <button>Szczegóły</button>
+                <button id="more-details">Szczegóły</button>
                 <div class="details">
                     <div class="description">
                         <h4>Cięcie szablonu JPG do HTML</h4>
@@ -152,7 +152,7 @@
             </div>
             <div class="project-2">
                 <img src="images/projects/PSDtoHTML.png">
-                <button>Szczegóły</button>
+                <button id="more-details">Szczegóły</button>
                 <div class="details">
                     <div class="description">
                         <h4>Cięcie szablonu PSD do HTML</h4>
@@ -186,9 +186,7 @@
     </section>
 
 
-
-    <!-- ======= JavaScript ====== -->
-    <script type="text/javascript" src="js/script.js"></script>
+   
 
     <!-- Angular-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
@@ -198,6 +196,9 @@
 
     <!-- Bootstrap -->
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+
+     <!-- ======= JavaScript ====== -->
+     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
