Add contact section & footer

--- a/index.html
+++ b/index.html
@@ -126,67 +126,97 @@
 
     <section id="projects" class="projects">
         <div class="container">
-        <h2>Wykonane projekty</h2>
-        <div class="box-project">
-            <div class="project-1">
-                <img src="images/projects/FlexboxRWD.png">
-                <button id="more-details">Szczegóły</button>
-                <div class="details">
-                    <div class="description">
-                        <h4>Cięcie szablonu JPG do HTML</h4>
-                        <i class="devicon-html5-plain-wordmark"></i>
-                        <i class="devicon-css3-plain-wordmark"></i>
-                        <i class="devicon-git-plain"></i>
+            <h2>Wykonane projekty</h2>
+            <div class="box-project">
+                <div class="project-1">
+                    <img src="images/projects/FlexboxRWD.png">
+                    <button id="more-details">Szczegóły</button>
+                    <div class="details">
+                        <div class="description">
+                            <h4>Cięcie szablonu JPG do HTML</h4>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Project_Flexbox_RWD" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
                     </div>
-                    <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank">
-                        <button class="icon-link">
-                            <i class="fa fa-desktop"></i>
-                        </button>
-                    </a>
-                    <a href="https://github.com/katarzynka1234/Project_Flexbox_RWD" target="_blank">
-                        <button class="icon-link">
-                            <i class="fa fa-code"></i>
-                        </button>
-                    </a>
                 </div>
-            </div>
-            <div class="project-2">
-                <img src="images/projects/PSDtoHTML.png">
-                <button id="more-details">Szczegóły</button>
-                <div class="details">
-                    <div class="description">
-                        <h4>Cięcie szablonu PSD do HTML</h4>
-                        <i class="devicon-html5-plain-wordmark"></i>
-                        <i class="devicon-css3-plain-wordmark"></i>
-                        <i class="devicon-bootstrap-plain"></i>
-                        <i class="devicon-jquery-plain-wordmark"></i>
-                        <i class="devicon-sass-original"></i>
-                        <i class="devicon-git-plain"></i>
+                <div class="project-2">
+                    <img src="images/projects/PSDtoHTML.png">
+                    <button id="more-details">Szczegóły</button>
+                    <div class="details">
+                        <div class="description">
+                            <h4>Cięcie szablonu PSD do HTML</h4>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-bootstrap-plain"></i>
+                            <i class="devicon-jquery-plain-wordmark"></i>
+                            <i class="devicon-sass-original"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Template_PSDtoHTML_1/" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Template_PSDtoHTML_1" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
                     </div>
-                    <a href="https://katarzynka1234.github.io/Template_PSDtoHTML_1/" target="_blank">
-                        <button class="icon-link">
-                            <i class="fa fa-desktop"></i>
-                        </button>
-                    </a>
-                    <a href="https://github.com/katarzynka1234/Template_PSDtoHTML_1" target="_blank">
-                        <button class="icon-link">
-                            <i class="fa fa-code"></i>
-                        </button>
-                    </a>
                 </div>
+                <div class="project-3"></div>
+                <div class="project-4"></div>
             </div>
-            <div class="project-3"></div>
-            <div class="project-4"></div>
         </div>
-    </div>
     </section>
 
-    <section>
-        <div class="temoprary"></div>
+    <section class="contact">
+        <div>
+            <div class="container">
+                <div class="contact-box">
+                    <h2>Kontakt do mnie</h1>
+                        <p>e-mail: katarzynka.f@gmail.com</p>
+                        <p>tel. +48669380297</p>
+                        <a href="https://www.linkedin.com/in/katarzyna-trze%C5%9Bniewska-b71a80135/" target="_blank">
+                            <button>
+                                <i class="fa fa-linkedin"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234" target="_blank">
+                            <button>
+                                <i class="fa fa-github-square"></i>
+                            </button>
+                        </a>
+                        <a href="https://www.facebook.com/katarzyna.fecyk?ref=bookmarks" target="_blank">
+                            <button>
+                                <i class="fa fa-facebook-square"></i>
+                            </button>
+                        </a>
+                </div>
+
+            </div>
+        </div>
     </section>
+    <footer class="stopka">
+        <p>2018 © Katarzyna Trześniewska. Made with
+            <i class="fa fa-heart"></i> and
+            <i class="fa fa-coffee"></i> in Jelenia Góra.</p>
+    </footer>
 
 
-   
+
+
 
     <!-- Angular-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
@@ -197,8 +227,8 @@
     <!-- Bootstrap -->
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
 
-     <!-- ======= JavaScript ====== -->
-     <script type="text/javascript" src="js/script.js"></script>
+    <!-- ======= JavaScript ====== -->
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
