--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img src="images/about_me/mojePhoto.JPG">
                 </div>
                 <div class="about-text">
-                    <p>Nazywam się Katarzyna Trześniewska. W wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                    <p>Nazywam się Katarzyna Trześniewska. Z wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
                         możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
                         gier planszowych.</p>
                     <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
@@ -130,13 +130,16 @@
             <div class="box-project">
                 <div class="project-1">
                     <img src="images/projects/FlexboxRWD.png">
-                    <button id="more-details">Szczegóły</button>
+                    <!--<button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu JPG do HTML</h4>
+                            <p>Projekt został wykonany w ramach bootcampu. Samodzielnie zaprogramowany szablon w HTML i CSS
+                                na podstawie otrzymanego pliku .jpg. Wykorzysane tu możliwości to m.in. Flexbox, Transition,
+                                pseudoklasy oraz RWD Media queries. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
-                            <i class="devicon-git-plain"></i>
+
                         </div>
                         <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank">
                             <button class="icon-link">
@@ -152,10 +155,15 @@
                 </div>
                 <div class="project-2">
                     <img src="images/projects/PSDtoHTML.png">
-                    <button id="more-details">Szczegóły</button>
+                    <!-- <button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu PSD do HTML</h4>
+                            <p>Szablon wykonany na podstawie otrzymanego na bootcampie pliku .psd. Samodzielnie zaprogramowany
+                                w HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości
+                                Sass to: Variables, Nesting oraz Mixins. Carousel oraz grid z Bootsrapa. JS oraz jQuery pozwoliły
+                                uzyskać interaktywność asynchroniczną wybranych przycisków oraz animacji ikon. Projekt od
+                                początku wykonany z kontrolą wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -175,13 +183,39 @@
                         </a>
                     </div>
                 </div>
-                <div class="project-3"></div>
+                <div class="project-3">
+                    <img src="images/projects/BookingForm1.png">
+                    <!-- <button id="more-details">Szczegóły</button> -->
+                    <div class="details">
+                        <div class="description">
+                            <h4>Formularz rezerwacji</h4>
+                            <p>Projekt własny służący przećwiczeniu możliwości formularzy z użuciem populrnej biblioteki Bootstrap.
+                                Responsywny z walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
+                                W projekcie prowadzony jest system kontroli wersji. </p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-bootstrap-plain"></i>                            
+                            <i class="devicon-sass-original"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Booking-form" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Booking-form" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
                 <div class="project-4"></div>
             </div>
         </div>
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <div>
             <div class="container">
                 <div class="contact-box">
