--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img src="images/about_me/mojePhoto.JPG">
                 </div>
                 <div class="about-text">
-                    <p>Nazywam się Katarzyna Trześniewska. Z wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
+                    <p>Nazywam się <strong>Katarzyna Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
                         możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
                         gier planszowych.</p>
                     <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
@@ -73,16 +73,24 @@
                     </p>
                 </div>
                 <div class="about-text not-visible">
-                    <p>Nazywam się Katarzyna Trześniewska. Z wykształcenia ekonomistka, z zamiłowania Front-End Developer. Zafascynowana
-                        możliwościami wizualnymi aktualnych technologii webowych. Amatorka biegów narciarskich oraz miłośniczka
-                        gier planszowych.</p>
-                    <p>Ciągły rozwój we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
-                        przede mną jeszcze wiele nauki, ale właśnie to daje mi ogromną motywację w działaniu.</p>
-                    <p>Aktualnie mieszkam w Jeleniej Górze. W przypadku ciekawej oferty relokacja jest także brana pod uwagę
-                        przeze mnie.
-                    </p>
+                    <br>
+                    <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę IT. Zdecydowałam się pójść w
+                        kierunku Front-end, ponieważ jestem wrażliwa na estetykę oraz formę graficzną prezentowanych w sieci
+                        treści. Lubię również rozwijać wizualne efekty swoich projektów.</p>
+                    <p>W maju tego roku ukończyłam intensywny bootcamp ‘Front-end Developer’ w Kodilli. Trzymiesięczny kurs
+                        dał mi solidne podstawy oraz pozwolił poznać aktualnie stosowane technologie webowe. Najlepiej odnajduję
+                        się w języku CSS3, który oferuje ogromne możliwości stylów oraz animacji. Poznanie JavaScript oraz
+                        jQuery otworzyło przed mną świat języków scryptowych, który mnie bardzo zainspirował. Mam zamiar go
+                        coraz lepiej zgłębiać. Aktualnie poznaję i wprowadzam do projektów AngularJS.</p>
+                    <p> Moje środowisko developerskie to aktualnie: Visual Studio Code (pracowałam również na SublimeText3); system kontroli
+                        wersji Git; NMP: tusk runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
+                        SASS na CSS oraz dodanie niezbędnych prefixów.</p>
+                    <p>Programowanie stało się jedną z moich pasji. Tworzenie aplikacji webowych i nadawanie im piękna oraz
+                        możliwości interakcji z użytkownikiem sprawia mi dużo radości. Zawsze szukam rozwiązań napotkanych problemów,
+                        dzięki czemu odkrywam całkiem nowe rozwiązania i to daje największą satysfakcję.</p>
+                        <p>Ponieżej zaprezentowałam swoje dotychczasowe projekty, które w dalszym ciągu rozwijam i doskonale. </p>
                 </div>
-                <button>Czytaj więcej</button>
+                <button id="read_more">Czytaj więcej</button>
             </div>
         </div>
     </section>
@@ -128,15 +136,15 @@
         <div class="container">
             <h2>Wykonane projekty</h2>
             <div class="box-project">
-                <div class="project-1">
+                <div class="project-1 project">
                     <img src="images/projects/FlexboxRWD.png">
-                    <!--<button id="more-details">Szczegóły</button> -->
+                   <!-- <button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu JPG do HTML</h4>
                             <p>Projekt został wykonany w ramach bootcampu. Samodzielnie zaprogramowany szablon w HTML i CSS
-                                na podstawie otrzymanego pliku .jpg. Wykorzysane tu możliwości to m.in. Flexbox, Transition,
-                                pseudoklasy oraz RWD Media queries. </p>
+                                na podstawie otrzymanego pliku JPG. Wykorzysane tu możliwości to m.in. Flexbox, Transition,
+                                pseudoklasy. Strona jest responsywna dzięki użyciu Media queries. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
 
@@ -153,17 +161,17 @@
                         </a>
                     </div>
                 </div>
-                <div class="project-2">
+                <div class="project-2 project">
                     <img src="images/projects/PSDtoHTML.png">
-                    <!-- <button id="more-details">Szczegóły</button> -->
+                    <!--<button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu PSD do HTML</h4>
-                            <p>Szablon wykonany na podstawie otrzymanego na bootcampie pliku .psd. Samodzielnie zaprogramowany
-                                w HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości
-                                Sass to: Variables, Nesting oraz Mixins. Carousel oraz grid z Bootsrapa. JS oraz jQuery pozwoliły
-                                uzyskać interaktywność asynchroniczną wybranych przycisków oraz animacji ikon. Projekt od
-                                początku wykonany z kontrolą wersji. </p>
+                            <p>Szablon wykonany na podstawie otrzymanego pliku w formacie PSD. Samodzielnie zaprogramowany w
+                                HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości Sass
+                                to: variables, nesting oraz mixins. Carousel oraz Grid z Bootsrapa. JS oraz jQuery pozwoliły
+                                uzyskać interaktywność wybranych przycisków oraz animacji ikon. Responsywność strony uzyskana
+                                dzięki Boostrap Grid oraz Media querre. Projekt wykonany z kontrolą wersji Git. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -189,12 +197,12 @@
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
-                            <p>Projekt własny służący przećwiczeniu możliwości formularzy z użuciem populrnej biblioteki Bootstrap.
+                            <p>Projekt służący przećwiczeniu możliwości formularzy z użuciem populrnej biblioteki Bootstrap.
                                 Responsywny z walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora Sass.
                                 W projekcie prowadzony jest system kontroli wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
-                            <i class="devicon-bootstrap-plain"></i>                            
+                            <i class="devicon-bootstrap-plain"></i>
                             <i class="devicon-sass-original"></i>
                             <i class="devicon-git-plain"></i>
                         </div>
@@ -210,9 +218,59 @@
                         </a>
                     </div>
                 </div>
-                <div class="project-4"></div>
+                <div class="project-4">
+                    <img src="images/projects/Rock_Paper_Scissors.png">
+                    <!-- <button id="more-details">Szczegóły</button> -->
+                    <div class="details">
+                        <div class="description">
+                            <h4>Gra w Marynarza</h4>
+                            <p>Aplikacja do gry w popularnego Marynarza. Projekt napisany w ramach bootcampu z wykorzysaniem Bootrapa oraz JavaScript.                             </p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-bootstrap-plain"></i>
+                            <i class="devicon-javascript-plain"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Rock-Paper-Scissors/" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Rock-Paper-Scissors" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-5">
+                    <img src="images/projects/KanbanBoard.png">
+                    <!-- <button id="more-details">Szczegóły</button> -->
+                    <div class="details">
+                        <div class="description">
+                            <h4>Kanban Board</h4>
+                            <p>Aplikacja Kanban Board służy do zarządzania zadaniami i projektami. Projekt ten został zaprogramowany
+                                w ramach bootcampiu. W projekcie jest użyty jQuery oraz jQueryUI. Wykonaie projektu pozwoliło
+                                mi poznać podstawy działania komunikacji z serwerem za pomocą Ajax oraz API. </p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-bootstrap-plain"></i>
+                            <i class="devicon-jquery-plain-wordmark"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/Kanban-Board/" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/Kanban-Board" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                    </div>
+                    <div class="project-6"></div>
+                </div>
             </div>
-        </div>
     </section>
 
     <section id="contact" class="contact">
@@ -247,9 +305,6 @@
             <i class="fa fa-heart"></i> and
             <i class="fa fa-coffee"></i> in Jelenia Góra.</p>
     </footer>
-
-
-
 
 
     <!-- Angular-->
