Edit contact section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
 
     </section>
-
+ <!-- ======== PROJECTS SECTION ============= -->
     <section id="projects" class="projects">
         <div class="container">
             <h2>Wykonane projekty</h2>
@@ -271,14 +271,14 @@
                 </div>
             </div>
     </section>
-
+<!-- FINISH PROJECTS SECTION -->
     <section id="contact" class="contact">
         <div>
             <div class="container">
                 <div class="contact-box">
                     <h2>Kontakt do mnie</h1>
-                        <p>e-mail: katarzynka.f@gmail.com</p>
-                        <p>tel. +48669380297</p>
+                        <p><strong>e-mail</strong>: katarzynka.f@gmail.com</p>
+                        <p><strong>tel.</strong> +48669380297</p>
                         <a href="https://www.linkedin.com/in/katarzyna-trze%C5%9Bniewska-b71a80135/" target="_blank">
                             <button>
                                 <i class="fa fa-linkedin"></i>
