Edit scroll-down icon

--- a/index.html
+++ b/index.html
@@ -63,31 +63,58 @@
                     <img src="images/about_me/mojePhoto.JPG">
                 </div>
                 <div class="about-text">
-                    <p>Nazywam się <strong>Katarzyna&nbsp;Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania <strong>Front-&nbsp;End&nbsp;Developer</strong>. Zafascynowana
-                        możliwościami <strong>wizualnymi</strong> aktualnych <strong>technologii webowych</strong>. Amatorka biegów narciarskich oraz miłośniczka
+                    <p>Nazywam się
+                        <strong>Katarzyna&nbsp;Trześniewska</strong>. Z wykształcenia ekonomistka, z zamiłowania
+                        <strong>Front-&nbsp;End&nbsp;Developer</strong>. Zafascynowana możliwościami
+                        <strong>wizualnymi</strong> aktualnych
+                        <strong>technologii webowych</strong>. Amatorka biegów narciarskich oraz miłośniczka
                         <strong>gier planszowych</strong>.</p>
-                    <p>Ciągły <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma, że
-                        przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną <strong>motywację w działaniu</strong>.</p>
-                    <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę w tym kierunku jako <strong>Junior Front-end Developer</strong>.
+                    <p>Ciągły
+                        <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
+                        że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną
+                        <strong>motywację w działaniu</strong>.</p>
+                    <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę w tym kierunku jako
+                        <strong>Junior Front-end Developer</strong>.
                     </p>
                 </div>
                 <div class="about-text not-visible">
                     <br>
-                    <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę <strong>IT</strong>. Zdecydowałam się pójść w
-                        kierunku <strong>Front-end</strong>, ponieważ jestem wrażliwa na <strong>estetykę</strong> oraz <strong>formę graficzną</strong> prezentowanych w sieci
-                        treści. Lubię również rozwijać <strong>wizualne</strong> efekty swoich projektów.</p>
-                    <p>W maju tego roku ukończyłam intensywny <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs
-                        dał mi solidne podstawy oraz pozwolił poznać <strong>aktualnie</strong> stosowane <strong>technologie webowe</strong>. Najlepiej odnajduję
-                        się w języku <strong>CSS3</strong>, który w połączeniu z <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie <strong>JavaScript</strong> oraz
-                        <strong>jQuery</strong> otworzyło przed mną świat <strong>języków scryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go
-                        coraz lepiej zgłębiać. Aktualnie poznaję i wprowadzam do projektów <strong>AngularJS</strong>.</p>
-                    <p> Moje <strong>środowisko developerskie</strong> to aktualnie: <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli
-                        wersji <strong>Git</strong>; <strong>NMP</strong>: tusk runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
+                    <p>Rok temu podjęłam decyzję o zmianie ścieżki rozwoju zawodowego w stronę
+                        <strong>IT</strong>. Zdecydowałam się pójść w kierunku
+                        <strong>Front-end</strong>, ponieważ jestem wrażliwa na
+                        <strong>estetykę</strong> oraz
+                        <strong>formę graficzną</strong> prezentowanych w sieci treści. Lubię również rozwijać
+                        <strong>wizualne</strong> efekty swoich projektów.</p>
+                    <p>W maju tego roku ukończyłam intensywny
+                        <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs dał mi solidne podstawy oraz
+                        pozwolił poznać
+                        <strong>aktualnie</strong> stosowane
+                        <strong>technologie webowe</strong>. Najlepiej odnajduję się w języku
+                        <strong>CSS3</strong>, który w połączeniu z
+                        <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie
+                        <strong>JavaScript</strong> oraz
+                        <strong>jQuery</strong> otworzyło przed mną świat
+                        <strong>języków scryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz lepiej zgłębiać.
+                        Aktualnie poznaję i wprowadzam do projektów
+                        <strong>AngularJS</strong>.</p>
+                    <p> Moje
+                        <strong>środowisko developerskie</strong> to aktualnie:
+                        <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli wersji
+                        <strong>Git</strong>;
+                        <strong>NMP</strong>: tusk runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
                         SASS na CSS oraz dodanie niezbędnych prefixów.</p>
-                    <p><strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie <strong>aplikacji webowych</strong> i nadawanie im piękna oraz
-                        możliwości <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze <strong>szukam rozwiązań</strong> napotkanych problemów,
-                        dzięki czemu odkrywam całkiem nowe rozwiązania i to daje największą <strong>satysfakcję</strong>.</p>
-                        <p>Ponieżej zaprezentowałam swoje dotychczasowe <strong>projekty</strong>, które w dalszym ciągu <strong>rozwijam</strong> i <strong>doskonale</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi nie wahaj sie ze mną <strong>skontaktować</strong>!</p>
+                    <p>
+                        <strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie
+                        <strong>aplikacji webowych</strong> i nadawanie im piękna oraz możliwości
+                        <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze
+                        <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe rozwiązania i
+                        to daje największą
+                        <strong>satysfakcję</strong>.</p>
+                    <p>Ponieżej zaprezentowałam swoje dotychczasowe
+                        <strong>projekty</strong>, które w dalszym ciągu
+                        <strong>rozwijam</strong> i
+                        <strong>doskonale</strong>. Zachęcam do ich przejżenia. Jęśli masz jakieś uwagi nie wahaj sie ze mną
+                        <strong>skontaktować</strong>!</p>
                 </div>
                 <button id="read_more">Czytaj więcej</button>
             </div>
@@ -130,14 +157,13 @@
         </div>
 
     </section>
- <!-- ======== PROJECTS SECTION ============= -->
+    <!-- ======== PROJECTS SECTION ============= -->
     <section id="projects" class="projects">
         <div class="container">
             <h2>Wykonane projekty</h2>
             <div class="box-project">
                 <div class="project-1 project">
                     <img src="images/projects/FlexboxRWD.png">
-                   <!-- <button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu JPG do HTML</h4>
@@ -146,7 +172,6 @@
                                 pseudoklasy. Strona jest responsywna dzięki użyciu Media queries. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
-
                         </div>
                         <a href="https://katarzynka1234.github.io/Project_Flexbox_RWD/" target="_blank">
                             <button class="icon-link">
@@ -162,7 +187,6 @@
                 </div>
                 <div class="project-2 project">
                     <img src="images/projects/PSDtoHTML.png">
-                    <!--<button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu PSD do HTML</h4>
@@ -191,8 +215,7 @@
                     </div>
                 </div>
                 <div class="project-3">
-                    <img src="images/projects/BookingForm1.png">
-                    <!-- <button id="more-details">Szczegóły</button> -->
+                    <img src="images/projects/BookingForm1.png"> 
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
@@ -219,11 +242,12 @@
                 </div>
                 <div class="project-4">
                     <img src="images/projects/Rock_Paper_Scissors.png">
-                    <!-- <button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Gra w Marynarza</h4>
-                            <p>Aplikacja do gry w popularnego Marynarza. Projekt napisany w ramach bootcampu z wykorzysaniem Bootrapa oraz JavaScript.                             </p>
+                            <p>Aplikacja do gry w popularnego Marynarza. Aplikacja napisana w ramach bootcampu z wykorzysaniem
+                                Bootrapa oraz JavaScript Projekt pozwolił mi przećwiczyć tworzenie zmiennych, istrukcji warunkowych
+                                if, swich oraz definiowanie funkcji a także manimulację elementami DOM. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -244,7 +268,6 @@
                 </div>
                 <div class="project-5">
                     <img src="images/projects/KanbanBoard.png">
-                    <!-- <button id="more-details">Szczegóły</button> -->
                     <div class="details">
                         <div class="description">
                             <h4>Kanban Board</h4>
@@ -271,14 +294,16 @@
                 </div>
             </div>
     </section>
-<!-- FINISH PROJECTS SECTION -->
+    <!-- FINISH PROJECTS SECTION -->
     <section id="contact" class="contact">
         <div>
             <div class="container">
                 <div class="contact-box">
                     <h2>Kontakt do mnie</h1>
-                        <p><strong>e-mail</strong>: katarzynka.f@gmail.com</p>
-                        <p><strong>tel.</strong> +48669380297</p>
+                        <p>
+                            <strong>e-mail</strong>: katarzynka.f@gmail.com</p>
+                        <p>
+                            <strong>tel.</strong> +48669380297</p>
                         <a href="https://www.linkedin.com/in/katarzyna-trze%C5%9Bniewska-b71a80135/" target="_blank">
                             <button>
                                 <i class="fa fa-linkedin"></i>
