--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <section id="about" class=" about">
-        <div class="container">
+        <!--div class="container"-->
             <div class="about-box">
                 <h2>O mnie</h2>
                 <div class="picture">
@@ -118,7 +118,7 @@
                 </div>
                 <button id="read_more">Czytaj więcej</button>
             </div>
-        </div>
+        <!--/div-->
     </section>
 
     <section id="technology" class="technology">
